[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Objects/13/Skillicon13_35.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Level_Components/LevelControl.gd" type="Script" id=2]
[ext_resource path="res://Assets/Objects/13/Skillicon13_17.png" type="Texture" id=3]


[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Settings" type="TextureButton" parent="."]
margin_left = 25.0
margin_top = 20.0
margin_right = 85.0
margin_bottom = 80.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
expand = true

[node name="Restart" type="Button" parent="."]
margin_left = 25.0
margin_top = 100.0
margin_right = 85.0
margin_bottom = 160.0
mouse_default_cursor_shape = 2
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true

[node name="DoubleSpeed" type="CheckButton" parent="."]
margin_left = 3.0
margin_top = 800.0
margin_right = 152.0
margin_bottom = 877.0
grow_vertical = 2
rect_scale = Vector2( 1.5, 1.5 )
mouse_default_cursor_shape = 2
text = "2x Speed"
align = 1
icon_align = 1
expand_icon = true

[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="toggled" from="DoubleSpeed" to="." method="_on_DoubleSpeed_toggled"]
